# tomlcpp

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  exon.toml  mise.toml  toml.cppm
.github/workflows/: ci.yml
src/: toml.cppm
tests/: parse.cpp  serde.cpp
